--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>여기를 WMD241-김동영-202120409</title>
+    <title>WMD241-김동영-202120409</title>
   </head>
   <body>
-    <h1>여기를 WMD241-김동영-202120409</h1>
+    <h1>WMD241-김동영-202120409</h1>
     <ol>
       <li><a href="./src/w2/index.html">2주차</a></li>
       <li><a href="./src/w3/index.html">3주차</a></li>
