--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -40,11 +40,19 @@
         background-color: #dcccad;
         padding: 1rem;
       }
+
+      p {
+        margin: 8px 0;
+      }
+
+      .p2 {
+        margin: 8px 0 20px 0;
+      }
     </style>
   </head>
   <body>
     <div class="container">
-      <p
+      <h1
         style="
           font-size: 69px;
           font-weight: 700;
@@ -53,7 +61,7 @@
         "
       >
         파스타 카르보나라
-      </p>
+      </h1>
       <p><stong>CLAIRE SAFFITZ</stong></p>
       <p>2023.01.04</p>
       <p><em>레서피</em></p>
@@ -144,6 +152,7 @@
           <td>스파게티 혹은 부카티니 혹은 리가토니</td>
         </tr>
       </table>
+
       <h2>준비</h2>
       <h3>단계 1</h3>
       <p>
@@ -212,6 +221,7 @@
         관찰레를 섞어서 파스타를 그릇에 나누어주세요. 후추와 따로 떼어둔
         치즈가루로 꾸며주세요.
       </p>
+
       <p>
         편집자의 참고 사항: 이 레시피는 원래 2018년 1월호에 게재되었습니다. 더
         많은 최고의 파스타 레시피를 확인하려면 여기를 참조하세요.
