--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -38,15 +38,63 @@
 
       .callout {
         background-color: #dcccad;
+        border-radius: 8px;
         padding: 1rem;
+        margin: 24px 0 48px 0;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 21px;
       }
 
       p {
+        font-size: 18px;
+        font-weight: 400;
+        line-height: 27px;
         margin: 8px 0;
+        color: #24211d;
       }
 
-      .p2 {
-        margin: 8px 0 20px 0;
+      .style1 {
+        font-size: 14px;
+        line-height: 21px;
+        font-weight: 400;
+        color: #585550;
+      }
+      .margin1 {
+        margin: 8px 0 24px 0;
+      }
+
+      .margin2 {
+        margin: 20px 0 8px 0;
+      }
+
+      .margin3 {
+        margin: 12px 0;
+      }
+
+      th,
+      td {
+        padding: 3px 8px 3px 8px;
+      }
+
+      h2 {
+        font-size: 35px;
+        font-weight: 700;
+        line-height: 52.5px;
+        margin: 48px 0 12px 0;
+        color: #24211d;
+      }
+      h3 {
+        font-size: 23px;
+        font-weight: 500;
+        line-height: 34.5px;
+        color: #24211d;
+      }
+      .border {
+        border-bottom: 2px solid #b1ada8;
+
+        border-collapse: collapse;
+        border-spacing: 0;
       }
     </style>
   </head>
@@ -62,15 +110,17 @@
       >
         파스타 카르보나라
       </h1>
-      <p><stong>CLAIRE SAFFITZ</stong></p>
-      <p>2023.01.04</p>
-      <p><em>레서피</em></p>
+      <p><strong style="font-weight: 700">CLAIRE SAFFITZ</strong></p>
+      <p><em style="font-style: normal; font-weight: 500">레서피</em></p>
+      <p class="style1">2023.01.04</p>
+
       <img
         src="../../../assets/pasta-carbonara.jpg"
         alt="흰 접시 위에 담긴 카르보나라 파스타 관찰레가 같이 버무려져있다"
+        style="display: block"
       />
-      <p>사진: Chelsie Craig, 스타일링: Molly Baz</p>
-      <p><strong>총 소요 시간 24분</strong></p>
+      <p class="style1 margin1">사진: Chelsie Craig, 스타일링: Molly Baz</p>
+      <p style="margin-bottom: 16px"><strong>총 소요 시간 24분</strong></p>
       <p>
         육즙이 풍부한 바삭한 돼지고기, 후추 맛이 가득하고 계란으로 풍성한 벨벳
         같은 치즈 소스를 가진 카르보나라는 밤새 놀고 들어온 새벽 2시도 만들 수
@@ -96,43 +146,45 @@
         저녁 식사 때는 이 파스타 요리를 샐러드와 함께 제공하는 것이 좋지만, 밤새
         놀고 난 뒤라면 그저 포크를 집어 파스타만 먹어도 됩니다.
       </p>
+
       <p class="callout">
         본 앱티트에 표시된 모든 제품은 편집자가 협찬을 받지 않고 독립적으로
         선택한 것입니다. 그러나 아래의 소매 링크를 통해 구매해주신다면 저희가
         수수료를 받기에 도움이 됩니다.
       </p>
       <h2>재료</h2>
-      <p>4인분기준</p>
-      <table>
+      <p class="style1 margin3">4인분기준</p>
+
+      <table cellspacing="0">
         <tr>
-          <td>수량</td>
-          <td>단위</td>
-          <td>품목</td>
+          <td class="border">수량</td>
+          <td class="border">단위</td>
+          <td class="border">품목</td>
         </tr>
         <tr>
-          <td>3</td>
+          <td style="text-align: right">3</td>
           <td>Tbsp.</td>
           <td>코셔 소금</td>
         </tr>
         <tr>
-          <td>4</td>
+          <td style="text-align: right">4</td>
           <td>oz.</td>
           <td>
             관찰레(염장 돼지볼살) 혹은 판체타(이탈리안 베이컨) 혹은 베이컨
           </td>
         </tr>
         <tr>
-          <td>2</td>
+          <td style="text-align: right">2</td>
           <td>oz.</td>
           <td>파르마지아노 레지아노 혹은 페코리노 로마노</td>
         </tr>
         <tr>
-          <td>4</td>
+          <td style="text-align: right">4</td>
           <td></td>
           <td>대란 노른자</td>
         </tr>
         <tr>
-          <td>2</td>
+          <td style="text-align: right">2</td>
           <td></td>
           <td>대란</td>
         </tr>
@@ -142,12 +194,12 @@
           <td>막 간 후추</td>
         </tr>
         <tr>
-          <td>2</td>
+          <td style="text-align: right">2</td>
           <td>Tbsp.</td>
           <td>엑스트라 버진 올리브 오일</td>
         </tr>
         <tr>
-          <td>1</td>
+          <td style="text-align: right">1</td>
           <td>lb.</td>
           <td>스파게티 혹은 부카티니 혹은 리가토니</td>
         </tr>
@@ -162,7 +214,7 @@
         <em>소금 3큰술</em>
         을 넣고 뚜껑을 덮어주세요 (이렇게 하면 물이 빨리 끓습니다).
       </p>
-      <h3>단계 2</h3>
+      <h3 class="margin2">단계 2</h3>
       <p>
         물이 끓기 전에 다른 준비를 해주세요.
         <em>관찰레 4oz.</em>
@@ -170,7 +222,7 @@
         <em>치즈 2oz.</em>
         를 곱게 갈아서 ¼ 분량은 나중을 위해 따로 떼어두세요.
       </p>
-      <h3>단계 3</h3>
+      <h3 class="margin2">단계 3</h3>
       <p>
         중간 크기의 그릇에
         <em>계란 6개 중 4개는 노른자만, 나머지 2개는 흰자도 같이</em>
@@ -178,37 +230,37 @@
         떼어둔 분량을 제외한) 갈아놓은 치즈를 넣어주세요. 후추를 적당히 갈아
         넣고 한 켠에 보관해주세요.
       </p>
-      <h3>단계 4</h3>
+      <h3 class="margin2">단계 4</h3>
       <p>
         냄비 옆에서 주물팬 등 두꺼운 팬에
         <em>기름 2큰술</em>
         을 중간 불로 가열해주세요. 관찰레를 넣고 가장자리가 바삭해질 때까지 가끔
         뒤적이며 약 7-10분간 조리해주세요.
       </p>
-      <h3>단계 5</h3>
+      <h3 class="margin2">단계 5</h3>
       <p>
         관찰레를 조리하던 팬의 불을 끄세요. 관찰레를 건져서 작은 그릇에
         옮겨주세요. 관찰레에서 나온 기름은 내열 계량컵에 붓고, 팬에 다시 약
         3큰술을 넣어주세요. 남은 기름은 버려주세요.
       </p>
-      <h3>단계 6</h3>
+      <h3 class="margin2">단계 6</h3>
       <p>
         <em>파스타 1lb.</em>
         를 끓는 물에 넣고 가끔 저어주며, 포장에 적힌 시간보다 2분 더 짧게
         조리해주세요. 파스타가 거의 익을 때면, 내열 계량컵으로 면수 1¾컵을 떠서
         가져오세요.
       </p>
-      <h3>단계 7</h3>
+      <h3 class="margin2">단계 7</h3>
       <p>
         팬에 떠놓은 면수 중 1컵을 붓고 넣고 중간 불로 끓이세요. 콜랜더로
         파스타를 떠서 팬에 옮겨주세요.
       </p>
-      <h3>단계 8</h3>
+      <h3 class="margin2">단계 8</h3>
       <p>
         파스타를 계속 휘저어가며, 물이 대략 절반 정도 줄어들고, 면이 알단테가
         될때까지 약 2분간 조리하세요. 팬을 레인지에서 꺼내세요.
       </p>
-      <h3>단계 9</h3>
+      <h3 class="margin2">단계 9</h3>
       <p>
         면수 ¼컵을 계란믹스에 부어 휘젓고, 아주 천천히 팬에 흘려 넣으면서 계속
         저어주세요. 치즈가 녹고 계란이 윤기가는 소스를 형성할 때까지 계속
@@ -216,13 +268,13 @@
         비슷한 농도로 만들기 위해 남은 면수 ½컵을 젓어 넣어주세요 (아마도 모두
         사용하지는 않을 것입니다).
       </p>
-      <h3>단계 10</h3>
+      <h3 class="margin2">단계 10</h3>
       <p>
         관찰레를 섞어서 파스타를 그릇에 나누어주세요. 후추와 따로 떼어둔
         치즈가루로 꾸며주세요.
       </p>
 
-      <p>
+      <p class="callout" style="margin: 48px 0 0px 0">
         편집자의 참고 사항: 이 레시피는 원래 2018년 1월호에 게재되었습니다. 더
         많은 최고의 파스타 레시피를 확인하려면 여기를 참조하세요.
       </p>
