--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -112,7 +112,7 @@
       </h1>
       <p><strong style="font-weight: 700">CLAIRE SAFFITZ</strong></p>
       <p><em style="font-style: normal; font-weight: 500">레서피</em></p>
-      <p class="style1">2023.01.04</p>
+      <p class="style1 margin1">2023.01.04</p>
 
       <img
         src="../../../assets/pasta-carbonara.jpg"
@@ -120,7 +120,9 @@
         style="display: block"
       />
       <p class="style1 margin1">사진: Chelsie Craig, 스타일링: Molly Baz</p>
-      <p style="margin-bottom: 16px"><strong>총 소요 시간 24분</strong></p>
+      <p style="margin-bottom: 16px">
+        <strong style="font-weight: 500">총 소요 시간 24분</strong>
+      </p>
       <p>
         육즙이 풍부한 바삭한 돼지고기, 후추 맛이 가득하고 계란으로 풍성한 벨벳
         같은 치즈 소스를 가진 카르보나라는 밤새 놀고 들어온 새벽 2시도 만들 수
