--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -112,7 +112,7 @@
       </h1>
       <p><strong style="font-weight: 700">CLAIRE SAFFITZ</strong></p>
       <p><em style="font-style: normal; font-weight: 500">레서피</em></p>
-      <p class="style1 margin1">2023.01.04</p>
+      <p class="margin1 style1">2023.01.04</p>
 
       <img
         src="../../../assets/pasta-carbonara.jpg"
