--- a/src/w4/assignment/w4.html
+++ b/src/w4/assignment/w4.html
@@ -28,6 +28,7 @@
       .container {
         padding-inline: 32px;
         padding-block: 32px;
+        padding: 2rem;
         max-width: 1024px;
         background-color: #f1eee8;
       }
