--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <li><a href="./src/w4/w4-2.html">4주차 두번째</a></li>
       <li><a href="./src/w4/assignment/w4.html">4주차 과제</a></li>
       <li><a href="./src/w5/index.html">5주차 </a></li>
+      <li><a href="./src/w6/card.html">6주차 </a></li>
+      <li><a href="./src/w6/flex.html">flex </a></li>
+      <li><a href="./w7/index.html">7주차(at class) </a></li>
+      <li><a href="./w7/assignment/index.html">7주차 과제(abstract)</a></li>
     </ol>
   </body>
 </html>
