week7_과제(Abstract)

--- a/w7/assignment/index.html
+++ b/w7/assignment/index.html
@@ -11,11 +11,7 @@
     <div class="top">
       <div class="section__top navigation">
         <ol class="navigation__menu-group navigation__menu-group-left">
-          <li
-            class="navigation__logo"
-            img
-            src="../assignment/adobe_logo.png"
-          ></li>
+          <li class="navigation__logo"></li>
 
           <li class="navigation__menu-border01">Abstract</li>
           <li class="navigation__menu-border02">Help Center</li>
@@ -51,7 +47,7 @@
                 Abstract lets you manage, version, and document your designs in
                 one place.
               </div>
-              <div class="table-opt-3">learn more</div>
+              <div class="table-opt-3">learn more →</div>
             </td>
             <td class="icon-position">
               <div class="table-icon"></div>
@@ -62,7 +58,7 @@
                 Configure your account settings, such as your email, profile
                 details, and password.
               </div>
-              <div class="table-opt-3">learn more</div>
+              <div class="table-opt-3">learn more →</div>
             </td>
           </tr>
           <tr>
@@ -77,7 +73,7 @@
                 Use Abstract organizations, teams, and projects to organize your
                 people and your work.
               </div>
-              <div class="table-opt-3">learn more</div>
+              <div class="table-opt-3">learn more →</div>
             </td>
             <td class="icon-position">
               <div class="table-icon"></div>
@@ -87,7 +83,7 @@
               <div class="table-opt-2">
                 Change subscriptions and payment details.
               </div>
-              <div class="table-opt-3">learn more</div>
+              <div class="table-opt-3">learn more →</div>
             </td>
           </tr>
           <tr>
@@ -99,7 +95,7 @@
               <div class="table-opt-2">
                 Set up and configure SSO, SCIM, and Just-in-Time provisioning.
               </div>
-              <div class="table-opt-3">learn more</div>
+              <div class="table-opt-3">learn more →</div>
             </td>
             <td class="icon-position">
               <div class="table-icon"></div>
@@ -107,12 +103,53 @@
             <td class="table-padding">
               <h1 class="table-opt-1">Abstract support</h1>
               <div class="table-opt-2">Get in touch with a human.</div>
-              <div class="table-opt-3">learn more</div>
+              <div class="table-opt-3">learn more →</div>
             </td>
           </tr>
         </table>
       </div>
     </div>
-    <div class="section">footer</div>
+    <div class="bottom">
+      <div class="flex-bottom flex-bottom-opt-1 bottom-text">
+        <div class="flex-bottom-left">
+          <div class="flex-bottom-opt-2">
+            <h2>Abstract</h2>
+            <div>Start Trial</div>
+            <div>Pricing</div>
+            <div>Download</div>
+          </div>
+          <div class="flex-bottom-opt-2">
+            <h2>Resources</h2>
+            <div>Blog</div>
+            <div>Help Center</div>
+            <div>Release Notes</div>
+            <div>Status</div>
+          </div>
+          <div class="flex-bottom-opt-2">
+            <h2>Community</h2>
+            <div>Twitter</div>
+            <div>LinkedIn</div>
+            <div>Facebook</div>
+            <div>Dribbble</div>
+            <div>Podcast</div>
+          </div>
+          <div class="flex-bottom-opt-2">
+            <h2>Company</h2>
+            <div>About Us</div>
+            <div>Careers</div>
+            <div>Legal</div>
+            <br />
+            <h3>Contact Us</h3>
+            <div>info@abstract.com</div>
+          </div>
+        </div>
+        <div class="flex-bottom-opt-3">
+          <div class="bottom-logo"></div>
+          <div>© Copyright 2023</div>
+          <div>Abstract Studio Design, Inc.</div>
+          <div>All rights reserved</div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
