--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li><a href="./src/w6/card.html">6주차 </a></li>
       <li><a href="./src/w6/flex.html">flex </a></li>
       <li><a href="./w7/index.html">7주차(at class) </a></li>
-      <li><a href="./w7/assignment/index.html">7주차 과제(abstract)</a></li>
+      <li><a href="./w7/assignment/index.html">7주차 과제(Abstract)</a></li>
     </ol>
   </body>
 </html>
