--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
       <li><a href="./src/w6/flex.html">flex </a></li>
       <li><a href="./src/w7/index.html">7주차(at class) </a></li>
       <li><a href="./src/w7/assignment/index.html">7주차 과제(Abstract)</a></li>
+      <li><a href="./src/w8/index.html">8주차(at class) </a></li>
+      <li><a href="./src/w9/index.html">9주차(at class) </a></li>
     </ol>
   </body>
 </html>
