--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
       <li><a href="./src/w7/assignment/index.html">7주차 과제(Abstract)</a></li>
       <li><a href="./src/w8/index.html">8주차(at class) </a></li>
       <li><a href="./src/w9/index.html">9주차(at class) </a></li>
+      <li><a href="./src/w10/index.html">10주차 (at class) </a></li>
+      <li><a href="./src/w10/assignment/index.html">10주차 과제 </a></li>
     </ol>
   </body>
 </html>
