--- a/src/w10/index.html
+++ b/src/w10/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <li>
-      <a href="./assignment_demo/assignment_demo.html">assignment_demo</a>
-    </li>
+    <li><a href="./grid/index.html">grid</a></li>
+    <li><a href="./grid-step2/index.html">grid-step2</a></li>
+    <li><a href="./assignment/index.html">Assignment</a></li>
   </body>
 </html>
