--- a/src/w10/assignment/index.html
+++ b/src/w10/assignment/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Stark</title>
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="stylesheet" href="./style/card.css" />
   </head>
   <body>
     <nav class="section navigation">
       <div class="container navigation__container">
-        <div class="navigation___menu-group navigation___menu-group--left">
+        <div class="navigation__menu-group navigation__menu-group--btn">
           <div class="navigation__logo">
             <svg
               width="32"
@@ -27,15 +28,197 @@
               ></path>
             </svg>
           </div>
-
-          <div>USE CASES</div>
-          <div>PRICING</div>
-          <div>SUPPORT</div>
-          <div>RESOURCES</div>
-          <div>LOG IN</div>
-          <div>START FREE TRIAL</div>
+          <div class="navigation__menu-group navigation__menu-group--left">
+            <div>USE CASES</div>
+            <div>PRICING</div>
+            <div>SUPPORT</div>
+            <div>RESOURCES</div>
+            <div class="gap">LOG IN</div>
+          </div>
+          <div class="navigation__menu-group navigation__menu-group--right">
+            <div class="btn2">START FREE TRIAL</div>
+          </div>
         </div>
       </div>
     </nav>
+    <div class="main">
+      <div class="sidebar">
+        <div class="sidebar__top">
+          <div class="sidebar__search">Search Library</div>
+          <div class="sidebar__search-box">
+            <div class="sidebar__search-box-icon">
+              <img src="../assignment/Fonts/search-regular-24.png" />
+            </div>
+          </div>
+        </div>
+        <div class="sidebar__cate">
+          <div class="sidebar__categories sidebar__categories-opt1">Home</div>
+          <div class="sidebar__categories">Collections</div>
+          <div class="sidebar__categories">Categories</div>
+        </div>
+        <div class="sidebar__bottom">
+          <div class="sidebar__bottom-title">Contribute to Stark</div>
+          <div class="sidebar__bottom-mid">
+            Got any accessibility resources or news?
+          </div>
+          <div class="sidebar__bottom-box">
+            <div class="sidebar__bottom-box-text">Submit a Resource</div>
+          </div>
+        </div>
+      </div>
+      <div class="card-collection">
+        <div class="title">
+          <div class="title-title">New in the Library</div>
+          <div class="title-title more">VIEW ALL</div>
+        </div>
+        <div class="title">
+          <div class="subtitle">
+            Newly added accessibility resources, guides, and more.
+          </div>
+        </div>
+
+        <div class="card">
+          <div class="card_top">
+            <img
+              src="https://res.cloudinary.com/stark-lab/image/upload/v1679345547/daisy_high_e2e14faca3.jpg"
+              class="library-thumbnail rounded-lg"
+              width="40"
+              height="40"
+              style="border: 1px solid black"
+              alt="DAISY Consortium"
+            />
+          </div>
+          <div class="card_title">RESOURCES</div>
+          <div class="card_subtitle">Inclusive<br />Publishing</div>
+        </div>
+        <div class="card">
+          <div class="card_top">
+            <img
+              src="https://res.cloudinary.com/stark-lab/image/upload/v1679345933/Screenshot_2023_03_20_at_3_58_45_PM_b615f86e7e.png"
+              class="library-thumbnail rounded-lg"
+              width="40"
+              height="40"
+              style="border: 1px solid black"
+              alt="The Accessible Publishing Learning Network"
+            />
+          </div>
+          <div class="card_title">RESOURCES</div>
+          <div class="card_subtitle">
+            The APLN<br />Accessible<br />Publishing...
+          </div>
+        </div>
+        <div class="card">
+          <div class="card_top">
+            <img
+              src="https://res.cloudinary.com/stark-lab/image/upload/v1679345736/uni_profile_93228_9c84b19231.jpg"
+              class="library-thumbnail rounded-lg"
+              width="40"
+              height="40"
+              style="border: 1px solid black"
+              alt="Humber College Institute of Technology and Advanced Learning"
+            />
+          </div>
+          <div class="card_title">RESOURCES</div>
+          <div class="card_subtitle">Making<br />Accessible Books</div>
+        </div>
+        <div class="card">
+          <div class="card_top">
+            <img
+              src="https://res.cloudinary.com/stark-lab/image/upload/v1679345547/daisy_high_e2e14faca3.jpg"
+              class="library-thumbnail rounded-lg"
+              width="40"
+              height="40"
+              style="border: 1px solid black"
+              alt="DAISY Consortium"
+            />
+          </div>
+          <div class="card_title">RESOURCES</div>
+          <div class="card_subtitle">
+            The Daisy<br />Consortiums<br />Accessible...
+          </div>
+        </div>
+        <div class="card">
+          <div class="card_top">
+            <img
+              src="https://res.cloudinary.com/stark-lab/image/upload/v1658845042/language_please_logo_d4b822280f.png"
+              class="library-thumbnail rounded-lg"
+              width="40"
+              height="40"
+              style="border: 1px solid black"
+              alt="language please"
+            />
+          </div>
+          <div class="card_title">RESOURCES</div>
+          <div class="card_subtitle">
+            language, Please :<br />
+            Style Guide &<br />Resources for...
+          </div>
+        </div>
+        <div class="card">
+          <div class="card_top">
+            <img
+              src="https://res.cloudinary.com/stark-lab/image/upload/v1653070254/library_author_google_7723cb132a.png"
+              class="library-thumbnail rounded-lg"
+              width="40"
+              height="40"
+              style="border: 1px solid black"
+              alt="Google"
+            />
+          </div>
+          <div class="card_title">Blogs N Articles</div>
+          <div class="card_subtitle">
+            Four steps to more<br />inclusive,precise<br />language
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main">
+      <div class="sidebar"></div>
+      <div class="card-collection card-color">
+        <div class="title">
+          <div class="title-title">Featured Collections</div>
+          <div class="title-title more">VIEW ALL</div>
+        </div>
+        <div class="title">
+          <div class="subtitle2">
+            Handpicked and curated collections around accessibility.
+          </div>
+        </div>
+
+        <div class="card2 card-color">
+          <div class="card_subtitle2">Disability<br />Employment</div>
+          <img
+            class="card__image collections-card__image width-[261px] absolute bottom-0 left-0"
+            loading="lazy"
+            alt=""
+            src="https://res.cloudinary.com/stark-lab/image/upload/v1653845743/library_collection_making_accessible_color_combos_42c8d90a99.png"
+            style="margin-top: 26px"
+          />
+        </div>
+        <div class="card2 card-color">
+          <div class="card_subtitle2">
+            Making<br />Accessible Color<br />Combos
+          </div>
+          <img
+            class="card__image collections-card__image width-[261px] absolute bottom-0 left-0"
+            loading="lazy"
+            alt=""
+            src="https://res.cloudinary.com/stark-lab/image/upload/v1653845743/library_collection_making_accessible_color_combos_42c8d90a99.png"
+          />
+        </div>
+        <div class="card2 card-color">
+          <div class="card_subtitle2">
+            Tips and Tricks<br />for Inclusive<br />Social Media
+          </div>
+          <img
+            class="card__image collections-card__image width-[261px] absolute bottom-0 left-0"
+            loading="lazy"
+            alt=""
+            src="https://res.cloudinary.com/stark-lab/image/upload/v1653845743/library_collection_Inclusive_Social_Media_b9669e6d39.png"
+          />
+        </div>
+      </div>
+    </div>
+    <div class="bottom"></div>
   </body>
 </html>
