--- a/src/w10/assignment/index.html
+++ b/src/w10/assignment/index.html
@@ -29,14 +29,35 @@
             </svg>
           </div>
           <div class="navigation__menu-group navigation__menu-group--left">
-            <div>USE CASES</div>
-            <div>PRICING</div>
-            <div>SUPPORT</div>
-            <div>RESOURCES</div>
+            <div class="btn3">
+              <div class="btn1">USE CASES</div>
+              <div class="btn4">
+                <img
+                  src="../assignment/Fonts/down-arrow-solid-24.png "
+                  width="10px"
+                  height="12px"
+                  style="color: rgb(56, 31, 209)"
+                />
+              </div>
+
+              <div class="btn1">PRICING</div>
+              <div class="btn1">SUPPORT</div>
+              <div class="btn1">RESOURCES</div>
+              <div class="btn4">
+                <img
+                  src="../assignment/Fonts/down-arrow-solid-24.png "
+                  width="10px"
+                  height="12px"
+                  style="color: rgb(56, 31, 209)"
+                />
+              </div>
+            </div>
             <div class="gap">LOG IN</div>
           </div>
           <div class="navigation__menu-group navigation__menu-group--right">
-            <div class="btn2">START FREE TRIAL</div>
+            <div class="btn2">
+              <div class="btn2_txt">START FREE TRIAL</div>
+            </div>
           </div>
         </div>
       </div>
@@ -219,6 +240,103 @@
         </div>
       </div>
     </div>
-    <div class="bottom"></div>
+    <div class="bottom">
+      <div class="bottom_cat">
+        <div class="card3">
+          <div class="card3_top">USE CASES</div>
+          <div class="card3_mid">For Designers</div>
+          <div class="card3_mid">For Developers</div>
+          <div class="card3_mid">For Product Managers</div>
+          <div class="card3_mid">For Compliance Managers</div>
+        </div>
+        <div class="card3">
+          <div class="card3_top">RESOURCES</div>
+          <div class="card3_mid">Blog</div>
+          <div class="card3_mid">Library</div>
+          <div class="card3_mid">Release Notes</div>
+          <div class="card3_mid">Slack Community</div>
+        </div>
+        <div class="card3">
+          <div class="card3_top">HELP</div>
+          <div class="card3_mid">My Account</div>
+          <div class="card3_mid">Support Docs</div>
+          <div class="card3_mid">Contact Us</div>
+          <div class="card3_mid">Feature Requests</div>
+        </div>
+        <div class="card3">
+          <div class="card3_top">COMPANY</div>
+          <div class="card3_mid">Stark Framework</div>
+          <div class="card3_mid">Privacy Policy</div>
+          <div class="card3_mid">Terms of Service</div>
+          <div class="card3_mid">Code of Conduct</div>
+        </div>
+        <div class="card3">
+          <div class="card3_top">SECURITY</div>
+          <div class="card3_mid">Security Overview</div>
+          <div class="card3_mid">Cookie Policy</div>
+          <div class="card3_mid">GDPR</div>
+          <div class="card3_mid">Status</div>
+        </div>
+        <div class="card3">
+          <div class="card3_top">DESIGN INTEGRATIONS</div>
+          <div class="card3_mid">Stark for Figma</div>
+          <div class="card3_mid">Stark for FigJam</div>
+          <div class="card3_mid">Stark for Sketch</div>
+          <div class="card3_mid">Stark for Adobe XD</div>
+        </div>
+        <div class="card3">
+          <div class="card3_top">DEVELOPER INTEGRATIONS</div>
+          <div class="card3_mid">Stark for Chrome</div>
+          <div class="card3_mid">Stark for Firefox</div>
+          <div class="card3_mid">Stark for Edge</div>
+          <div class="card3_mid">Stark for Safari</div>
+          <div class="card3_mid">Stark for Arc</div>
+          <div class="card3_mid">Stark for Brave</div>
+        </div>
+      </div>
+
+      <div class="bottom_info">
+        <div class="logos">
+          <div class="logo1">
+            <img
+              alt="Stark's Twitter account link"
+              src="https://images.getstark.co/marketing/social-media/twitter.png"
+              class="logo1"
+            />
+          </div>
+          <div class="logo1">
+            <img
+              alt="Stark's Instagram account link"
+              src="https://images.getstark.co/marketing/social-media/instagram.png"
+              class="logo1"
+            />
+          </div>
+          <div class="logo1">
+            <img
+              alt="Stark's Slack account link"
+              src="https://images.getstark.co/marketing/social-media/slack.png"
+              class="logo1"
+            />
+          </div>
+          <div class="logo1">
+            <img
+              alt="Stark's LinkedIn account link"
+              src="https://images.getstark.co/marketing/social-media/share-linkedin.webp"
+              class="logo1"
+            />
+          </div>
+          <div class="logo1">
+            <img
+              alt="Stark's YouTube account link"
+              src="https://images.getstark.co/marketing/social-media/youtube.png"
+              class="logo1"
+            />
+          </div>
+        </div>
+        <div class="copy">
+          MADE REMOTELY WITH LOVE BY STARK LAB, INC. COPYRIGHT 2023
+        </div>
+      </div>
+    </div>
   </body>
 </html>
