--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <li><a href="./src/w9/index.html">9주차(at class) </a></li>
       <li><a href="./src/w10/index.html">10주차 (at class) </a></li>
       <li><a href="./src/w10/assignment/index.html">10주차 과제제출 </a></li>
+      <li><a href="./src/w11/index.html">11주차 </a></li>
     </ol>
   </body>
 </html>
