--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
       <li><a href="./src/w10/index.html">10주차 (at class) </a></li>
       <li><a href="./src/w10/assignment/index.html">10주차 과제제출 </a></li>
       <li><a href="./src/w11/index.html">11주차 </a></li>
+      <li><a href="./src/w12/index.html">12주차 </a></li>
+      <li><a href="./src/w13/index.html">13주차_동영상 </a></li>
     </ol>
   </body>
 </html>
